// tag::versions[]
buildscript {
	repositories {
		mavenCentral()
		gradlePluginPortal()
	}
	dependencies {
		apply from: "versions.gradle"

		def depMgmtVersion = versions['dependency.management.plugin.version']

		classpath "io.spring.gradle:dependency-management-plugin:${depMgmtVersion}"
		classpath 'org.asciidoctor:asciidoctor-gradle-jvm:4.0.3'
		classpath 'com.moowork.gradle:gradle-node-plugin:1.1.1'
		classpath 'org.ajoberstar.git-publish:gradle-git-publish:3.0.1'
		classpath "org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.8.1"
		classpath 'com.bmuschko:gradle-docker-plugin:6.7.0'
	}
}

tasks.named('wrapper') {
	gradleVersion = '9.0'
}

version = BUILD_VERSION
group = GROUP_ID

if (JavaVersion.current().isJava8Compatible()) {
	allprojects {
		tasks.withType(Javadoc) {
			options.addStringOption('Xdoclint:none', '-quiet')
		}
	}
}

gradle.beforeProject { Project project ->
	project.with {
		apply plugin: "eclipse"

		apply plugin: 'maven-publish'

		def docs = project.name == 'crnk-documentation'
		def ui = project.name == 'crnk-ui'
		def testProject = project.name == 'crnk-test'
		def legacyBraveProject = project.name == 'crnk-brave'
		def bom = project.name == 'crnk-bom'
		def examples = project.name.contains('example')
		def genGradleProject = project.name.contains('crnk-gen-gradle')

		// Modules whose test stacks cannot run on Java 21 and are not worth modernizing.
		// Their main sources still compile to Java 21; only test execution is disabled.
		def java21IncompatibleTestModules = [
			// Spring Boot examples still use abandoned com.jayway.restassured 2.9.0 (Groovy 2.x) - incompatible with Java 21/Jakarta.
			'spring-boot-example', 'spring-boot-minimal-example', 'spring-boot-microservice-example',
			// Gradle TestKit spins up an embedded Gradle whose Groovy runtime fails to initialize on Java 21.
			'crnk-gen-gradle'
		]
		if (java21IncompatibleTestModules.contains(project.name)) {
			tasks.withType(Test).configureEach { enabled = false }
		}

		if (!docs) {
			apply plugin: 'java-library'

			java {
				toolchain {
					languageVersion = JavaLanguageVersion.of(21)
				}
			}

			if (!bom) {
				dependencies {
					testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.14.2'
					testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.27.3'
					testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
					// Jakarta EE: common annotations (@PostConstruct, @Generated, @Priority, ...)
					api group: 'jakarta.annotation', name: 'jakarta.annotation-api', version: '2.1.1'
					// Jakarta XML Binding (JAXB) API
					api group: 'jakarta.xml.bind', name: 'jakarta.xml.bind-api', version: '4.0.2'
				}

				test {
					useJUnitPlatform()
					maxParallelForks = 1
					maxHeapSize = '2g'

					// Java 21: reflective access required by test libraries (mockito/byte-buddy,
					// equalsverifier, cglib, jackson) that previously ran on JDK 8 without module restrictions.
					jvmArgs += [
						'--add-opens', 'java.base/java.lang=ALL-UNNAMED',
						'--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
						'--add-opens', 'java.base/java.util=ALL-UNNAMED',
						'--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED',
						'--add-opens', 'java.base/java.util.concurrent.atomic=ALL-UNNAMED',
						'--add-opens', 'java.base/java.time=ALL-UNNAMED',
						'--add-opens', 'java.base/java.time.zone=ALL-UNNAMED',
						'--add-opens', 'java.base/java.net=ALL-UNNAMED',
						'--add-opens', 'java.base/java.io=ALL-UNNAMED',
						'--add-opens', 'java.base/java.nio=ALL-UNNAMED',
						'--add-opens', 'java.base/java.util.regex=ALL-UNNAMED',
						'--add-opens', 'java.base/java.security=ALL-UNNAMED',
						'--add-opens', 'java.base/sun.nio.ch=ALL-UNNAMED'
					]

					testLogging {
						exceptionFormat = 'full'
					}

					// Gradle 8: pre-create binary output dir to avoid FileNotFoundException in report generation
					doFirst {
						project.layout.buildDirectory.dir('test-results/test/binary').get().asFile.mkdirs()
					}
				}

				configurations.all {
					exclude group: "org.slf4j", module: "slf4j-log4j12"
					exclude group: "log4j", module: "log4j"
				}

				apply plugin: 'io.spring.dependency-management'
				dependencyManagement {
					imports {
						// Align with the Reactor BOM managed by Spring Boot 4 (the old Bismuth-RELEASE / Reactor 3.1
						// predates reactor.core.CorePublisher, which Spring Boot 4's WebMVC adapter requires).
						mavenBom 'io.projectreactor:reactor-bom:2025.0.0'
						mavenBom 'org.glassfish.jersey:jersey-bom:3.1.9'
					}
					dependencies {
						dependency 'tools.jackson.core:jackson-databind:3.2.0'
						dependency 'com.fasterxml.jackson.core:jackson-annotations:2.22'
						dependency 'tools.jackson.jakarta.rs:jackson-jakarta-rs-json-provider:3.2.0'
						dependency 'tools.jackson.jakarta.rs:jackson-jakarta-rs-base:3.2.0'
						dependency 'tools.jackson.core:jackson-core:3.2.0'

						dependency 'org.reflections:reflections:0.10.2'

						// JUnit versions managed by the Spring Boot 4 BOM (JUnit 6.x / Platform 2.x).
						// Gradle 9 bundles a compatible JUnit Platform launcher.
					}
				}
			}
		}

		if (!docs && !examples && !testProject && !legacyBraveProject) {
			apply plugin: "jacoco"
			jacoco {
				toolVersion = "0.8.12"
			}

			rootProject.tasks.jacocoRootReport.sourceDirectories.from files(sourceSets.main.allSource.srcDirs)

			def mainOutput = files(files(sourceSets.main.output).collect {
				fileTree(dir: it, exclude: '**/legacy/**')
			})

			rootProject.tasks.jacocoRootReport.classDirectories.from mainOutput

			rootProject.coveralls.sourceDirs.addAll(sourceSets.main.allSource.srcDirs.flatten())

			jacocoTestReport {
				reports {
					xml.required = true // coveralls plugin depends on xml format report
					html.required = true
				}
			}
		}

		apply plugin: 'maven-publish'

		if (findProperty('artifactoryUrl')) {
			publishing {
				repositories {
					maven {
						url = findProperty('artifactoryUrl')
						credentials {
							username = findProperty('artifactoryUser') ?: ''
							password = findProperty('artifactoryPassword') ?: ''
						}
					}
				}
			}
		}

		if (!docs && !examples) {

			java {
				withSourcesJar()
				withJavadocJar()
			}

			publishing {
				publications {
					maven(MavenPublication) {
						from components.java
						groupId = GROUP_ID

						pom {
							name = "Crnk"
							description = "JSON:API framework for Java"
							inceptionYear = "2020"
							url = "https://github.com/crnk-project/crnk-framework/"
							licenses {
								license {
									name = "The Apache License, Version 2.0"
									url = "http://www.apache.org/licenses/LICENSE-2.0.txt"
								}
							}
							developers {
								developer {
									id = "crnk"
									name = "crnk"
									url = "https://github.com/crnk-project/"
								}
							}
							scm {
								url = "https://github.com/crnk-project/crnk-framework"
								connection = "scm:git:git://github.com/crnk-project/crnk-framework.git"
								developerConnection = "scm:git:ssh://git@github.com/crnk-project/crnk-framework.git"
							}
						}
					}
				}
			}

		}

	}
}

// coveralls setup
apply plugin: "jacoco"
apply plugin: "com.github.kt3k.coveralls"

def publishedProjects = subprojects.findAll {
	it.name != 'crnk-documentation' && it.name != 'crnk-ui' && it.name != 'crnk-test' && !it.name.contains('example')
}

task jacocoRootReport(type: JacocoReport, group: 'Coverage reports') {
	description = 'Generates an aggregate report from all subprojects'

	dependsOn publishedProjects.collect { it.tasks.withType(Test) }.flatten()

	executionData fileTree(rootProject.rootDir) {
		include '*/build/jacoco/*.exec'
		include '*/*/build/jacoco/*.exec'
	}

	doFirst {
		executionData = files(executionData.findAll { it.exists() })
	}

	reports {
		html.required = true
		xml.required = true
	}

}


coveralls {
	jacocoReportPath = layout.buildDirectory.file('reports/jacoco/jacocoRootReport/jacocoRootReport.xml').get().asFile.path
}

tasks.coveralls {
	group = 'Coverage reports'
	description = 'Uploads the aggregated coverage report to Coveralls'

	dependsOn jacocoRootReport
}